--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My first git site</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque possimus, reprehenderit architecto natus voluptates labore et consectetur consequatur provident asperiores libero aliquam inventore, ratione est corporis, earum suscipit sint maxime!</p>
+    <header>
+        <h1>My first git site</h1>
+    </header>
+
+    <main>
+        <section>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque possimus, reprehenderit architecto natus voluptates
+                labore et consectetur consequatur provident asperiores libero aliquam inventore, ratione est corporis, earum
+                suscipit sint maxime!</p>
+        </section>
+        
+    </main>
+
 </body>
 </html>
