updated index.html and created css stylesheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>My first git site</h1>
@@ -16,8 +18,11 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque possimus, reprehenderit architecto natus voluptates
                 labore et consectetur consequatur provident asperiores libero aliquam inventore, ratione est corporis, earum
                 suscipit sint maxime!</p>
+            <ul>
+                <li>Blah</li>
+                <li>blah2</li>
+            </ul>
         </section>
-        
     </main>
 
 </body>
