added another section to inded and styles to sections

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
     <main>
         <section>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque possimus, reprehenderit architecto natus voluptates
-                labore et consectetur consequatur provident asperiores libero aliquam inventore, ratione est corporis, earum
-                suscipit sint maxime!</p>
+            labore et consectetur consequatur provident asperiores libero aliquam inventore, ratione est corporis, earum
+            suscipit sint maxime!</p>
             <ul>
                 <li>Blah</li>
                 <li>blah2</li>
             </ul>
+        </section>
+
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, error.
+            </p>
         </section>
     </main>
 
